added git util to invalidate caches after pull